2011-04-20 Jiri Olsa <olsajiri@gmail.com>
	* prevent gcc warning with single printf like arg passing
	* adding automated test support, so far for x86 and x86_64,
	  others are disabled. From this time on, I'll try to force
	  addition of automated test for each  fix/feature.. ;)

2011-04-16 Jiri Olsa <olsajiri@gmail.com>
	* fix display of char arguments
	* add threads fifo management to special directory
	  so the notification is not affected by other files

2011-04-06 Jiri Olsa <olsajiri@gmail.com>
	* fix memory leak in the argument display code

2011-04-05 Jiri Olsa <olsajiri@gmail.com>
	* fix controled config bug - missing shared config assignment
	* moving conf header files to new location + rename s/conf/h/
	* adding support for configuration file

2011-02-15 Jiri Olsa <olsajiri@gmail.com>
	* moving debian directory to the packaging
	* Sebastian Pipping <sping@gentoo.org>
	  - fix LDFLAGS/CFLAGS usage

2011-01-31 Jiri Olsa <olsajiri@gmail.com>
	* adding support for global symbol config
	  one global symbol tree to rule them all
	    - only one tree is searched during the plt entry/exit
	    - symbols are added during the bind audit callback

2010-10-17 Jiri Olsa <olsajiri@gmail.com>
	* Artur Skawina <art.08.09@gmail.com>
		- enhancing names check with *-logic for
		  "-l -t -f -s -n -b" options

-------------------------------------------------------------------------------
latrace 0.5.10

2010-10-13 Jiri Olsa <olsajiri@gmail.com>
	* Artur Skawina <art.08.09@gmail.com>
		-  add '-n' option, allowing to omit tracing certain symbols
	* 0.5.10 release changes

2010-10-02 Jiri Olsa <olsajiri@gmail.com>
	* Akos Pasztory <akos.pasztory@gmail.com>
		- more sophisticated parsing of /proc/self/maps

2010-09-15 Jiri Olsa <olsajiri@gmail.com>
	* dynamic rlimit stack check
	* recognize [stack] map arrea and handle it properly
	* synchronize --no-* option names

2010-09-07 Jiri Olsa <olsajiri@gmail.com>
	* adding stack limits dynamic check