@@ -56,7 +56,7 @@ do { \
 %token OPT_TIMESTAMP OPT_FRAMESIZE OPT_FRAMESIZE_CHECK
 %token OPT_HIDE_TID OPT_FOLLOW_FORK OPT_FOLLOW_EXEC
 %token OPT_DEMANGLE OPT_BRACES OPT_ENABLE_ARGS
-%token OPT_DETAIL_ARGS
+%token OPT_DETAIL_ARGS OPT_OUTPUT_TTY
 
 %union
 {
@@ -165,6 +165,11 @@ OPTIONS_DEF OPT_ENABLE_ARGS '=' BOOL
 OPTIONS_DEF OPT_DETAIL_ARGS '=' BOOL
 {
 	OPTION_ADD(LT_OPT_DETAIL_ARGS, $4, -1);
+}
+|
+OPTIONS_DEF OPT_OUTPUT_TTY '=' '"' FILENAME '"'
+{
+	OPTION_ADD(LT_OPT_OUTPUT_TTY, $5, -1);
 }
 |
 /* left blank intentionally */
